HTML, CSS, JS, Assets
Added images needed

HTML : Corrections pour le CSS
CSS : CSS pour le header, l'intro et la page about
JS: JS pour le fonctionnement des boutons et la date de la page Intro

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,5 +1,15 @@
 $c-bg: #efefef;
 $c-alt: #e41612;
-$c-text: #444;
+$c-text: #000000;
 
 $size-text: 18px;
+
+$step--2: clamp(0.5002rem, 0.4501rem + 0.2501vw, 0.7502rem);
+$step--1: clamp(0.7072rem, 0.6365rem + 0.3536vw, 1.0608rem);
+$step-0: clamp(1rem, 0.9rem + 0.5vw, 1.5rem);
+$step-1: clamp(1.414rem, 1.2726rem + 0.707vw, 2.121rem);
+$step-2: clamp(1.9994rem, 1.7995rem + 0.9997vw, 2.9991rem);
+$step-3: clamp(2.8271rem, 2.5444rem + 1.4136vw, 4.2407rem);
+$step-4: clamp(3.9976rem, 3.5978rem + 1.9988vw, 5.9964rem);
+$step-5: clamp(5.6526rem, 5.0873rem + 2.8263vw, 8.4789rem);
+$step-6: clamp(7.9928rem, 7.1935rem + 3.9964vw, 11.9891rem);
