--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,2 +1,245 @@
 @import 'utils/variables';
 @import 'components/type';
+@import '../../node_modules/modern-normalize/modern-normalize.css';
+
+html {
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    background-color: #FDEDD4;
+    width: 100vw;
+    height: 100vh;
+    top: 0px;
+    left: 0px;
+
+    font-family: "ab-megadot9", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    
+    position: relative;
+
+    overflow-x: hidden;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.header {
+    width: 100%;
+    height: 100%;
+    padding: 31px;
+
+    position: absolute;
+    z-index: 10;
+
+    background-color: #FDEDD4;
+
+    &__quit {
+        width: 100%;
+        height: fit-content;
+        margin-bottom: 62px;
+    }
+
+    &__ul {
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        gap: 31px;
+        padding: 0;
+    }
+
+    &__buttons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        font-size: $step-3;
+        color: $c-text;
+
+        width: 100%;
+        height: 100px;
+
+        outline-offset: -5px;
+        outline-color: black;
+        outline-width: 5px;
+        outline-style: solid;
+
+        cursor: pointer;
+
+        &--aboutme:hover {
+            background-image : url('../assets/images/buttons/aboutme.gif');
+            background-size: cover;
+            background-position-y: 50%;
+        }
+
+        &--case:hover {
+            background-image : url('../assets/images/buttons/case.gif');
+            background-size: cover;
+            background-position-y: 95%;
+
+            color: #FFFFFF;
+        }
+
+        &--projects:hover {
+            background-image : url('../assets/images/buttons/projects.gif');
+            background-size: cover;
+            background-position-y: 80%;
+
+            color: #FFFFFF;
+        }
+
+        &--credits:hover {
+            background-image : url('../assets/images/buttons/credits.gif');
+            background-size: cover;
+            background-repeat: no-repeat;
+
+            color: #FFFFFF;
+        }
+
+        &:active {
+            background-color: $c-text;
+            color: #FFFFFF;
+        }
+    }
+}
+
+.intro__burger {
+    position: fixed;
+    top: 31px;
+    left: 31px;
+}
+
+.intro {
+    width: 100vw;
+    height: 100vh;
+
+    background-image: url('../assets/images/background.png');
+    background-size: cover;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 31px;
+
+    &__page {
+        display: flex;
+        flex-direction: column;
+        gap: 124px;
+
+        h1 {
+            font-size: $step-3;
+            text-align: center;
+
+            margin: 0;
+        }
+    }
+
+    &__date {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 62px;
+
+        h2 {
+            margin: 0;
+
+            font-size: $step-3;
+        }
+    }
+}
+
+.aboutme {
+    width: 100vw;
+    height: fit-content;
+
+    padding: 123px 31px 31px 31px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__image {
+        width: 106px;
+        height: 106px;
+
+        margin-bottom: 31px;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__general {
+        width: 100%;
+
+        margin-bottom: 31px;
+
+        p {
+            font-size: $step-1;
+            margin: 0;
+
+            line-height: 140%;
+        }
+    }
+
+    &__hobbies {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        
+        margin-bottom: 31px;
+
+        h4 {
+            font-size: $step-1;
+            margin: 0;
+        }
+
+        p {
+            font-size: $step-0;
+            margin: 0;
+        }
+    }
+
+    &__top {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+
+        width: 100%;
+
+        h4 {
+            font-size: $step-1;
+            margin: 0;
+        }
+    }
+
+    
+
+    &__ranked {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, auto);
+        row-gap: 15px;
+
+        ol {
+            margin: 0;
+
+            li {
+                font-size: $step-0;
+            }
+        }
+    }
+
+    &__ranking {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+}
