--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -24,6 +24,14 @@ body {
 }
 
 .hidden {
+    /*
+    transform: translateX(-100vw);
+    position: absolute;
+    height: 100vh;
+
+    transition: all 0.5s ease-in-out;
+    */
+    
     display: none !important;
 }
 
@@ -32,7 +40,7 @@ body {
     height: 100%;
     padding: 31px;
 
-    position: absolute;
+    position: fixed;
     z-index: 10;
 
     background-color: #FDEDD4;
@@ -41,6 +49,10 @@ body {
         width: 100%;
         height: fit-content;
         margin-bottom: 62px;
+
+        img {
+            cursor: pointer;
+        }
     }
 
     &__ul {
@@ -104,12 +116,28 @@ body {
             color: #FFFFFF;
         }
     }
+
+    &__janus:hover {
+        background-image : url('../assets/images/buttons/janus.gif');
+        background-size: cover;
+        background-position-y: 50%;
+    }
+
+    &__mcdollars:hover {
+        background-image : url('../assets/images/buttons/dataplay.gif');
+        background-size: cover;
+        background-position-y: 45%;
+    }
 }
 
 .intro__burger {
     position: fixed;
     top: 31px;
     left: 31px;
+
+    img {
+        cursor: pointer;
+    }
 }
 
 .intro {
@@ -247,4 +275,407 @@ body {
 .case {
     width: 100%;
     padding: 123px 31px 31px 31px;
+
+    h3 {
+        font-size: $step-2;
+        margin-top: 0;
+        margin-bottom: 31px;
+        text-align: center;
+    }
+
+    h4 {
+        font-size: $step-1;
+        margin-top: 0;
+        margin-bottom: 31px;
+    }
+
+    &__margin {
+        margin-bottom: 31px !important;
+    }
+
+    p {
+        font-size: $step-0;
+        margin-top: 0;
+        margin-bottom: 62px;
+    }
+
+    img {
+        width: 100%;
+        margin-bottom: 31px;
+    }
+
+    &__link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: transparent;
+        
+        font-size: $step-3;
+        color: $c-text;
+
+        width: 100%;
+        height: 100px;
+
+        outline-offset: -5px;
+        outline-color: black;
+        outline-width: 5px;
+        outline-style: solid;
+
+        cursor: pointer;
+
+        text-decoration: none;
+
+        &:active {
+            background-color: $c-text;
+            color: #FFFFFF;
+        }
+    }
+}
+
+.janus__link {
+    
+    &:hover {
+        background-image : url('../assets/images/buttons/janus.gif');
+        background-size: cover;
+
+        color: #FFFFFF;
+    }
+}
+
+.dataplay__link {
+
+    &:hover {
+        background-image : url('../assets/images/buttons/dataplay.gif');
+        background-size: cover;
+        background-position-y: 40%;
+
+        color: #FFFFFF;
+    }
+}
+
+.lol__link {
+    &:hover {
+        background-image : url('../assets/images/buttons/lol.gif');
+        background-size: cover;
+        background-position-y: 40%;
+
+        color: #FFFFFF;
+    }
+}
+
+.decembre__link {
+    &:hover {
+        background-image : url('../assets/images/buttons/decembre.gif');
+        background-size: cover;
+        background-position-y: 40%;
+
+        color: #FFFFFF;
+    }
+}
+
+.projects {
+    width: 100%;
+    padding: 123px 31px 31px 31px;
+
+    h3 {
+        font-size: $step-2;
+        margin-top: 0;
+        margin-bottom: 31px;
+        text-align: center;
+    }
+
+    p {
+        font-size: $step-0;
+        margin-top: 0;
+        margin-bottom: 62px;
+    }
+
+    img {
+        width: 100%;
+        margin-bottom: 31px;
+    }
+
+    &__link {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        background-color: transparent;
+        
+        font-size: $step-3;
+        color: $c-text;
+
+        width: 100%;
+        height: 100px;
+
+        outline-offset: -5px;
+        outline-color: black;
+        outline-width: 5px;
+        outline-style: solid;
+
+        cursor: pointer;
+
+        text-decoration: none;
+
+        &:active {
+            background-color: $c-text;
+            color: #FFFFFF;
+        }
+    }
+}
+
+@media (min-width: 1200px) {
+
+    body {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        column-gap: 31px;
+    }
+
+    .header {
+        width: unset;
+        grid-column: 1 / 3;
+
+        position: relative;
+
+        z-index: 0;
+
+        border-right: #000000 solid 5px;
+
+        &__quit {
+            display: none;
+        }
+
+        &__buttons {
+
+            width: 100%;
+            height: 150px;
+        }
+    }
+
+    .intro__burger {
+        display: none;
+    }
+
+    main {
+        grid-column: 3 / 6;
+    }
+
+    .intro {
+        width: 100%;
+        height: 100vh;
+
+        &__date {
+
+            h2 {
+                font-size: $step-2;
+            }
+        }
+    }
+
+    .aboutme {
+        width: 100%;
+        height: fit-content;
+
+        padding: 31px 31px 31px 0px;
+
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
+        column-gap: 31px;
+
+        &__image {
+
+            grid-column: 3 / 4;
+            grid-row: 1 / 2;
+
+            width: 100%;
+            height: fit-content;
+
+            margin-bottom: 0px;
+        }
+
+        &__general {
+            grid-column: 1 / 3;
+            grid-row: 1 / 2;
+            width: 100%;
+            height: 100%;
+
+            margin-bottom: 0px;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+
+        &__hobbies {
+            grid-column: 1 / 5;
+            grid-row: 2 / 3;
+            width: 100%;
+        }
+
+        &__top {
+            grid-column: 1 / 5;
+            grid-row: 3 / 5;
+        }
+    }
+
+    .case {
+        padding: 31px 31px 31px 0px;
+
+        &__display {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &__role {
+            width: 100%;
+        }
+
+        img {
+            width: 100%;
+            margin-bottom: 31px;
+        }
+
+        &__link {
+            width: 687px;
+            height: 150px;
+        }
+    }
+
+    .janus__assets {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, auto);
+        column-gap: 31px;
+
+        h4 {
+            grid-column: 1 / 4;
+            grid-row: 1 / 2;
+        }
+
+        .janus__thumbnails {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+
+            width: 100%;
+        }
+
+        .janus__buttons {
+            grid-column: 1 / 3;
+            grid-row: 3 / 4;
+        }
+
+        .janus__hover {
+            grid-column: 3 / 4;
+            grid-row: 3 / 4;
+        }
+
+        .case__margin {
+            grid-column: 1 / 4;
+            grid-row: 4 / 5;
+        }
+
+        .janus__paragraph {
+            grid-column: 1 / 4;
+            grid-row: 5 / 6;
+        }
+    }
+
+    .janus__iteration {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, auto);
+        column-gap: 31px;
+
+        h4 {
+            grid-column: 1 / 4;
+            grid-row: 1 / 2;
+        }
+
+        .janus__first {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+        }
+
+        .janus__second {
+            grid-column: 1 / 2;
+            grid-row: 3 / 4;
+        }
+
+        .janus__third {
+            grid-column: 2 / 4;
+            grid-row: 3 / 4;
+        }
+
+        .case__margin {
+            grid-column: 1 / 4;
+            grid-row: 4 / 5;
+        }
+
+        .janus__paragraph {
+            grid-column: 1 / 4;
+            grid-row: 5 / 6;
+        }
+    }
+
+    .janus__final {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, auto);
+        column-gap: 31px;
+
+        margin-bottom: 31px;
+
+        h4 {
+            grid-column: 1 / 4;
+            grid-row: 1 / 2;
+        }
+
+        .janus__complete {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+        }
+    }
+
+    .dataplay__final {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, auto);
+        column-gap: 31px;
+
+        margin-bottom: 31px;
+
+        h4 {
+            grid-column: 1 / 4;
+            grid-row: 1 / 2;
+        }
+
+        .dataplay__complete {
+            grid-column: 1 / 4;
+            grid-row: 2 / 3;
+        }
+    }
+
+    .projects {
+        width: 100%;
+        padding: 31px 31px 31px 0px;
+
+        &__display {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        img {
+            margin-bottom: 62px;
+        }
+
+        &__link {
+            width: 687px;
+            height: 150px;
+        }
+    }
 }
