--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -154,6 +154,19 @@ body {
 
     padding: 31px;
 
+    /*
+    &__background {
+        position: absolute;
+        z-index: -10;
+
+        width: 100vw;
+        height: 100vh;
+
+        background-image: url('../assets/images/background.png');
+        background-size: cover;
+    }
+    */
+
     &__page {
         display: flex;
         flex-direction: column;
@@ -481,6 +494,20 @@ body {
     .intro {
         width: 100%;
         height: 100vh;
+
+        /*
+        &__background {
+            position: absolute;
+            padding: 31px 31px 31px 31px;
+            z-index: -10;
+
+            width: 100%;
+            height: 100%;
+
+            background-image: url('../assets/images/background.png');
+            background-size: cover;
+        }
+        */
 
         &__date {
 
