--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,6 +5,9 @@
 html {
     width: 100vw;
     height: 100vh;
+
+    display: flex;
+    justify-content: center;
 }
 
 body {
@@ -13,6 +16,8 @@ body {
     height: 100vh;
     top: 0px;
     left: 0px;
+
+    max-width: 2000px;
 
     font-family: "ab-megadot9", sans-serif;
     font-weight: 400;
@@ -40,7 +45,7 @@ body {
     height: 100%;
     padding: 31px;
 
-    //position: fixed;
+    position: fixed;
     z-index: 10;
 
     background-color: #FDEDD4;
@@ -68,7 +73,7 @@ body {
         justify-content: center;
         align-items: center;
         
-        font-size: $step-3;
+        font-size: $step-2;
         color: $c-text;
 
         width: 100%;
@@ -145,8 +150,8 @@ body {
     width: 100vw;
     height: 100vh;
 
-    background-image: url('../assets/images/background.png');
-    background-size: cover;
+    //background-image: url('../assets/images/background.png');
+    //background-size: cover;
 
     display: flex;
     justify-content: center;
@@ -154,7 +159,7 @@ body {
 
     padding: 31px;
 
-    /*
+    
     &__background {
         position: absolute;
         z-index: -10;
@@ -164,8 +169,11 @@ body {
 
         background-image: url('../assets/images/background.png');
         background-size: cover;
+        background-repeat: no-repeat;
+
+        pointer-events: none;
     }
-    */
+    
 
     &__page {
         display: flex;
@@ -262,8 +270,6 @@ body {
         }
     }
 
-    
-
     &__ranked {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -325,7 +331,7 @@ body {
 
         background-color: transparent;
         
-        font-size: $step-3;
+        font-size: $step-2;
         color: $c-text;
 
         width: 100%;
@@ -417,7 +423,7 @@ body {
 
         background-color: transparent;
         
-        font-size: $step-3;
+        font-size: $step-2;
         color: $c-text;
 
         width: 100%;
@@ -477,7 +483,7 @@ body {
         }
 
         &__buttons {
-
+            font-size: $step-3;
             width: 100%;
             height: 150px;
         }
@@ -495,20 +501,11 @@ body {
         width: 100%;
         height: 100vh;
 
-        /*
         &__background {
-            position: absolute;
-            padding: 31px 31px 31px 31px;
-            z-index: -10;
-
-            width: 100%;
-            height: 100%;
-
-            background-image: url('../assets/images/background.png');
-            background-size: cover;
+            background-size: contain;
+            background-repeat: repeat;
         }
-        */
-
+    
         &__date {
 
             h2 {
@@ -583,6 +580,7 @@ body {
         }
 
         &__link {
+            font-size: $step-3;
             width: 687px;
             height: 150px;
         }
@@ -717,6 +715,7 @@ body {
         }
 
         &__link {
+            font-size: $step-3;
             width: 687px;
             height: 150px;
         }
