--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -495,13 +495,19 @@ body {
 
     main {
         grid-column: 3 / 6;
+        position: relative;
     }
 
     .intro {
         width: 100%;
-        height: 100vh;
+        height: 100%;
+
+        position: sticky;
+        top: 0;
+        z-index: -10;
 
         &__background {
+            height: 100%;
             background-size: contain;
             background-repeat: repeat;
         }
