--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -31,10 +31,7 @@ body {
 .hidden {
     /*
     transform: translateX(-100vw);
-    position: absolute;
-    height: 100vh;
-
-    transition: all 0.5s ease-in-out;
+    overflow: hidden;
     */
     
     display: none !important;
