--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,7 +49,7 @@ body {
 
     position: fixed;
     z-index: 10;
-    overflow-y: scroll;
+    overflow-y: visible;
 
     background-color: #FDEDD4;
 
