--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -407,6 +407,17 @@ body {
     }
 }
 
+.grind__link {
+    &:hover {
+        background-image: url('../assets/images/buttons/grind.gif');
+        background-size: 150%;
+        background-position-y: 30%;
+        background-position-x: 40%;
+
+        color: #FFFFFF;
+    }
+}
+
 .projects {
     width: 100%;
     padding: 123px 31px 31px 31px;
